Partial CNetChan class rebuild and implementation (see description)
* Adapt codebase to new class to reduce rune-like code.
* Fixed several bugs where the global CClient pointer was used instead of the instance in question to issue bans and display information about a certain client in CBanSystem and Pylon.
* Upgraded CBanSystem and Pylon to use IPv6 instead (including IPv4 mapped IPv6 addresses). This breaks all existing banlist files! All bans have to be re-issued or the existing file has to be updated to use IPv4 mapped IPv6 addresses and renamed to 'banlist.json', and moved to the root of the 'platform' folder.

--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -182,6 +182,7 @@
     <ClInclude Include="..\protoc\sv_rcon.pb.h" />
     <ClInclude Include="..\public\include\edict.h" />
     <ClInclude Include="..\public\include\globalvars_base.h" />
+    <ClInclude Include="..\public\include\inetchannel.h" />
     <ClInclude Include="..\public\include\memaddr.h" />
     <ClInclude Include="..\public\include\bansystem.h" />
     <ClInclude Include="..\public\include\binstream.h" />
@@ -336,7 +337,10 @@
     <ClInclude Include="..\tier0\IConVar.h" />
     <ClInclude Include="..\tier0\interface.h" />
     <ClInclude Include="..\tier0\platform.h" />
+    <ClInclude Include="..\tier1\bitbuf.h" />
     <ClInclude Include="..\tier1\NetAdr2.h" />
+    <ClInclude Include="..\tier1\utlmemory.h" />
+    <ClInclude Include="..\tier1\utlvector.h" />
     <ClInclude Include="..\tier2\socketcreator.h" />
     <ClInclude Include="..\vpc\basefilesystem.h" />
     <ClInclude Include="..\vpc\IAppSystem.h" />
@@ -414,6 +418,7 @@
     <ClCompile Include="..\tier0\cvar.cpp" />
     <ClCompile Include="..\tier0\fasttimer.cpp" />
     <ClCompile Include="..\tier0\IConVar.cpp" />
+    <ClCompile Include="..\tier1\bitbuf.cpp" />
     <ClCompile Include="..\tier1\NetAdr2.cpp" />
     <ClCompile Include="..\tier2\socketcreator.cpp" />
     <ClCompile Include="..\vpc\basefilesystem.cpp" />
