Add AI Network methods and add hook for AIN connection debug

--- a/r5dev/resource/cfg/autoexec_server_dev.cfg
+++ b/r5dev/resource/cfg/autoexec_server_dev.cfg
@@ -26,4 +26,5 @@ sv_visualizetraces           "1"      // Show native and script related debug tr
 //// CAI              ////
 //////////////////////////
 ai_ainRebuildOnMapStart      "0"      // Whether to rebuild the AI Network graph on level load.
-ai_dumpAINfileFromLoad       "0"      // Whether to dump the parsed AI Network graph file loaded from disk.
+ai_ainDumpOnLoad             "0"      // Whether to dump the parsed AI Network graph file loaded from disk.
+ai_ainDebugConnect           "1"      // Show AI Network graph connection debug.
