--- a/r5dev/vproj/gamesdk.vcxproj.filters
+++ b/r5dev/vproj/gamesdk.vcxproj.filters
@@ -172,6 +172,9 @@
     <Filter Include="sdk\filesystem">
       <UniqueIdentifier>{9fbd3a16-56a4-4794-bfa6-680f41002c24}</UniqueIdentifier>
     </Filter>
+    <Filter Include="sdk\vstdlib">
+      <UniqueIdentifier>{48abe326-8ad7-43fa-875d-2e73c7c64106}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\client\vengineclient_impl.cpp">
@@ -233,18 +236,6 @@
     </ClCompile>
     <ClCompile Include="..\squirrel\sqapi.cpp">
       <Filter>sdk\squirrel</Filter>
-    </ClCompile>
-    <ClCompile Include="..\tier0\completion.cpp">
-      <Filter>sdk\tier0</Filter>
-    </ClCompile>
-    <ClCompile Include="..\tier0\cvar.cpp">
-      <Filter>sdk\tier0</Filter>
-    </ClCompile>
-    <ClCompile Include="..\tier0\IConVar.cpp">
-      <Filter>sdk\tier0</Filter>
-    </ClCompile>
-    <ClCompile Include="..\tier0\cmd.cpp">
-      <Filter>sdk\tier0</Filter>
     </ClCompile>
     <ClCompile Include="..\vgui\vgui_fpspanel.cpp">
       <Filter>sdk\vgui</Filter>
@@ -431,6 +422,21 @@
     </ClCompile>
     <ClCompile Include="..\filesystem\basefilesystem.cpp">
       <Filter>sdk\filesystem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\tier1\IConVar.cpp">
+      <Filter>sdk\tier1</Filter>
+    </ClCompile>
+    <ClCompile Include="..\tier1\cmd.cpp">
+      <Filter>sdk\tier1</Filter>
+    </ClCompile>
+    <ClCompile Include="..\tier1\cvar.cpp">
+      <Filter>sdk\tier1</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vstdlib\completion.cpp">
+      <Filter>sdk\vstdlib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\vstdlib\keyvaluessystem.cpp">
+      <Filter>sdk\vstdlib</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -839,19 +845,7 @@
     <ClInclude Include="..\thirdparty\spdlog\include\cfg\argv.h">
       <Filter>thirdparty\spdlog\include\cfg</Filter>
     </ClInclude>
-    <ClInclude Include="..\tier0\completion.h">
-      <Filter>sdk\tier0</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier0\cvar.h">
-      <Filter>sdk\tier0</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier0\IConVar.h">
-      <Filter>sdk\tier0</Filter>
-    </ClInclude>
     <ClInclude Include="..\tier0\basetypes.h">
-      <Filter>sdk\tier0</Filter>
-    </ClInclude>
-    <ClInclude Include="..\tier0\cmd.h">
       <Filter>sdk\tier0</Filter>
     </ClInclude>
     <ClInclude Include="..\vgui\vgui_fpspanel.h">
@@ -1216,6 +1210,21 @@
     </ClInclude>
     <ClInclude Include="..\common\sdktypes.h">
       <Filter>core</Filter>
+    </ClInclude>
+    <ClInclude Include="..\tier1\cmd.h">
+      <Filter>sdk\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\tier1\IConVar.h">
+      <Filter>sdk\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\tier1\cvar.h">
+      <Filter>sdk\tier1</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vstdlib\completion.h">
+      <Filter>sdk\vstdlib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\vstdlib\keyvaluessystem.h">
+      <Filter>sdk\vstdlib</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
