--- a/r5dev/vproj/dedicated.vcxproj
+++ b/r5dev/vproj/dedicated.vcxproj
@@ -331,16 +331,15 @@
     <ClInclude Include="..\thirdparty\spdlog\include\version.h" />
     <ClInclude Include="..\tier0\basetypes.h" />
     <ClInclude Include="..\tier0\commandline.h" />
-    <ClInclude Include="..\tier0\cmd.h" />
-    <ClInclude Include="..\tier0\completion.h" />
     <ClInclude Include="..\tier0\cpu.h" />
     <ClInclude Include="..\tier0\cputopology.h" />
-    <ClInclude Include="..\tier0\cvar.h" />
     <ClInclude Include="..\tier0\fasttimer.h" />
-    <ClInclude Include="..\tier0\IConVar.h" />
     <ClInclude Include="..\tier0\interface.h" />
     <ClInclude Include="..\tier0\platform.h" />
     <ClInclude Include="..\tier1\bitbuf.h" />
+    <ClInclude Include="..\tier1\cmd.h" />
+    <ClInclude Include="..\tier1\cvar.h" />
+    <ClInclude Include="..\tier1\IConVar.h" />
     <ClInclude Include="..\tier1\NetAdr2.h" />
     <ClInclude Include="..\tier1\utlmemory.h" />
     <ClInclude Include="..\tier1\utlvector.h" />
@@ -350,6 +349,8 @@
     <ClInclude Include="..\vpc\keyvalues.h" />
     <ClInclude Include="..\vphysics\QHull.h" />
     <ClInclude Include="..\vpklib\packedstore.h" />
+    <ClInclude Include="..\vstdlib\completion.h" />
+    <ClInclude Include="..\vstdlib\keyvaluessystem.h" />
     <ClInclude Include="..\windows\console.h" />
     <ClInclude Include="..\windows\system.h" />
   </ItemGroup>
@@ -416,14 +417,13 @@
     <ClCompile Include="..\squirrel\sqinit.cpp" />
     <ClCompile Include="..\squirrel\sqvm.cpp" />
     <ClCompile Include="..\tier0\commandline.cpp" />
-    <ClCompile Include="..\tier0\cmd.cpp" />
-    <ClCompile Include="..\tier0\completion.cpp" />
     <ClCompile Include="..\tier0\cpu.cpp" />
     <ClCompile Include="..\tier0\cputopology.cpp" />
-    <ClCompile Include="..\tier0\cvar.cpp" />
     <ClCompile Include="..\tier0\fasttimer.cpp" />
-    <ClCompile Include="..\tier0\IConVar.cpp" />
     <ClCompile Include="..\tier1\bitbuf.cpp" />
+    <ClCompile Include="..\tier1\cmd.cpp" />
+    <ClCompile Include="..\tier1\cvar.cpp" />
+    <ClCompile Include="..\tier1\IConVar.cpp" />
     <ClCompile Include="..\tier1\NetAdr2.cpp" />
     <ClCompile Include="..\tier2\socketcreator.cpp" />
     <ClCompile Include="..\vpc\IAppSystem.cpp" />
@@ -431,6 +431,8 @@
     <ClCompile Include="..\vpc\keyvalues.cpp" />
     <ClCompile Include="..\vphysics\QHull.cpp" />
     <ClCompile Include="..\vpklib\packedstore.cpp" />
+    <ClCompile Include="..\vstdlib\completion.cpp" />
+    <ClCompile Include="..\vstdlib\keyvaluessystem.cpp" />
     <ClCompile Include="..\windows\console.cpp" />
     <ClCompile Include="..\windows\system.cpp" />
   </ItemGroup>
